--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
-.App {
+body {
+
+  height: 700px;
+  background: linear-gradient(to top right, #66ff66 0%, #ffff00 100%);
+  background-attachment: fixed;
+}
+.app {
+
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+h1, p {
+  font-family: 'Gugi', cursive;
+}
+h1 {
+  font-size: 5rem;
+}
+.Papp {
+  margin-top: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  font-family: 'Gugi', cursive;
+  margin: 50px 20px 20px 20px;
+  width: 140px;
+  height: 45px;
+  border: 0;
+  border-radius: 5px;
+  outline: none;
 }
