--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+
+/* HERE CAN PUT LINK GOOGLE FONTS  AS IMPORT */
+@import url('https://fonts.googleapis.com/css?family=Gugi');
 body {
+  
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
